package com.kanneki.unittestapp.util

object UtilTag {

    /** Home Page */
    const val TAG_TEXT_FIELD_PAGE_INDEX = "page_index"
    const val TAG_BUTTON_VALUE = "button_value"
    const val TAG_BUTTON_NOT_VALUE = "button_not_value"
    const val TAG_DIALOG_MESSAGE = "dialog_message"

    /** List Page */
    const val TAG_ITEMS_LIST = "list_items"
    const val TAG_FLOAT_ACTION_BUTTON_ADD = "add_button"

    /** Account Page */
    const val TAG_TEXT_FIELD_USER_ACCOUNT = "user_account"
    const val TAG_TEXT_FIELD_USER_PASSWORD = "user_password"
    const val TAG_BUTTON_SEND_USER_DATA ="send_button"
    const val TAG_TEXT_VALUE_MESSAGE = "account_message"
    const val TAG_TEXT_NOT_VALUE_MESSAGE = "account_not_value_message"
}